<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.auth.SignUpFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blood_donation"
            android:layout_marginTop="16dp"
            android:textSize="20sp"
            android:layout_marginStart="16dp"
            android:layout_gravity="start"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textColor="@color/p_txt"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/give_blood_save_life"
            android:textSize="16sp"
            android:layout_marginStart="16dp"
            android:textAllCaps="true"
            android:layout_gravity="start"
            android:textStyle="normal"
            android:textColor="@color/s_txt"/>
        <ImageView
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_marginTop="50dp"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:background="@drawable/ic_logo"
            />

        <EditText
            android:id="@+id/name"
            android:layout_marginTop="48dp"
            android:layout_width="match_parent"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_height="48dp"
            android:hint="@string/name"
            android:textSize="16sp"
            android:background="@drawable/grey_bg"
            android:inputType="textPersonName"
            android:textColor="@color/p_txt"
            android:paddingStart="16dp"
            android:paddingEnd="4dp"
            />
        <EditText
            android:id="@+id/email"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_height="48dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="16sp"
            android:background="@drawable/grey_bg"
            android:textColor="@color/p_txt"
            android:paddingStart="16dp"
            android:paddingEnd="4dp"
            />
        <EditText
            android:id="@+id/pass"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_height="48dp"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textSize="16sp"
            android:background="@drawable/grey_bg"
            android:textColor="@color/p_txt"
            android:paddingStart="16dp"
            android:paddingEnd="4dp"
            />

        <Button
            android:id="@+id/signup"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="48dp"
            android:layout_marginLeft="48dp"
            android:backgroundTint="@color/pink"
            android:text="@string/sign_up"
            android:textSize="16sp"
            app:cornerRadius="16dp"
            android:drawableTint="@color/pink"
            android:textStyle="bold"/>

        <LinearLayout
            android:id="@+id/signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="end">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account"
                android:textSize="16sp"
                android:gravity="center"
                android:textStyle="normal"
                android:textColor="@color/p_txt"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textSize="16sp"
                android:gravity="center"
                android:textStyle="normal"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:textColor="@color/pink"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>