<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.AccountSetUpFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_shape"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/create_your_account"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:src="@drawable/ic_logo"
                    android:layout_gravity="center"
                    android:layout_marginTop="40dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:text="@string/dummy123"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/dummy123_gmail_com"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="24dp"/>
            </LinearLayout>


            <EditText
                android:layout_marginTop="32dp"
                android:layout_width="match_parent"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_height="48dp"
                android:hint="@string/phone"
                android:inputType="phone"
                android:textSize="16sp"
                android:background="@drawable/grey_bg"
                android:textColor="@color/p_txt"
                android:paddingStart="16dp"
                android:paddingEnd="4dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:orientation="horizontal"
                android:layout_marginTop="8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/blood_group"
                    android:layout_marginTop="2dp"
                    android:textSize="16sp"
                    android:layout_gravity="center"
                    android:textStyle="normal"
                    android:textColor="@color/p_txt"/>
                <Spinner
                    android:layout_height="48dp"
                    android:layout_width="match_parent"
                    android:layout_marginStart="16dp"
                    android:prompt="@string/bld_grp"
                    android:entries="@array/blood_group"
                    android:paddingStart="16dp"
                    android:background="@drawable/grey_bg"
                    >

                </Spinner>
            </LinearLayout>
            <EditText
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_height="wrap_content"
                android:minLines="2"
                android:hint="@string/address"
                android:inputType="textMultiLine"
                android:textSize="16sp"
                android:background="@drawable/grey_bg"
                android:textColor="@color/p_txt"
                android:paddingStart="16dp"
                android:paddingEnd="4dp"
                />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/do_you_want_to_donate_your_blood"
                android:checked="false"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                app:buttonTint="@color/pink"/>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="48dp"
        android:layout_marginLeft="48dp"
        android:backgroundTint="@color/orange"
        android:text="@string/ok_done"
        android:textAllCaps="true"
        android:textSize="16sp"
        app:cornerRadius="24dp"
        android:layout_gravity="bottom|center_horizontal"
        android:textStyle="bold"/>

</FrameLayout>