<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pink_orange"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.SignInFragment">

  <ImageView
      android:id="@+id/image"
      android:layout_width="wrap_content"
      android:layout_gravity="center_horizontal"
      android:layout_height="wrap_content"
      android:background="@drawable/hand"/>

  <LinearLayout
      android:layout_marginTop="240dp"
      android:orientation="vertical"
      android:background="@drawable/white"
      android:layout_width="match_parent"
      android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Wellcome"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textColor="@color/p_txt"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="to"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textColor="@color/p_txt"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blood_donation"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textColor="@color/pink"/>
    <EditText
        android:id="@+id/email"
        android:layout_marginTop="48dp"
        android:layout_width="match_parent"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_height="48dp"
        android:hint="@string/email"
        android:textSize="16sp"
        android:background="@drawable/grey_bg"
        android:inputType="textEmailAddress"
        android:textColor="@color/p_txt"
        android:paddingStart="16dp"
        android:paddingEnd="4dp"
        />
    <EditText
        android:id="@+id/pass"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_height="48dp"
        android:hint="@string/password"
        android:textSize="16sp"
        android:background="@drawable/grey_bg"
        android:textColor="@color/p_txt"
        android:paddingStart="16dp"
        android:paddingEnd="4dp"
        />

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="48dp"
        android:layout_marginLeft="48dp"
        android:backgroundTint="@color/pink"
        android:id="@+id/signIn"
        android:text="@string/sign_in"
        android:textSize="16sp"
        app:cornerRadius="24dp"
        android:textStyle="bold"/>
    <LinearLayout
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:layout_gravity="end"
        android:gravity="end"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/don_t_have_an_account_1"
          android:textColor="@color/p_txt"

          android:textSize="16sp"/>
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="4dp"
          android:text="@string/sign_up"
          android:textColor="@color/orange"
          android:textSize="16sp"

          />

    </LinearLayout>
  </LinearLayout>


</FrameLayout>