<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.ProfileFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/pink_orange"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/name"
            />

        <ImageView
            android:id="@+id/edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:visibility="gone"
            android:layout_marginBottom="16dp"
            android:background="@drawable/ic_baseline_edit_24"
            android:contentDescription="@string/name" />
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/ic_logo" />

        <EditText
            android:id="@+id/pro_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_image"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/pink"
            android:text="@string/dummy123"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/blood_grp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/image"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/white"
            android:drawableStart="@drawable/ic_blood"
            android:drawablePadding="16dp"
            android:text="@string/a"
            android:textColor="@color/txt_black"
            android:textSize="18sp"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/blood_grp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/white"
            android:drawableStart="@drawable/ic_pink_email_24"
            android:drawablePadding="16dp"
            android:text="@string/dummy123_gmail_com"
            android:textColor="@color/txt_black"
            android:textSize="18sp"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mail"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/white"
            android:drawableStart="@drawable/ic_baseline_local_phone_24"
            android:drawablePadding="16dp"
            android:text="@string/ph"
            android:textColor="@color/txt_black"
            android:textSize="18sp"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phone"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/white"
            android:drawableStart="@drawable/ic_outline_location_on_24"
            android:drawablePadding="16dp"
            android:inputType="textMultiLine"
            android:minLines="2"
            android:text="@string/location"
            android:textColor="@color/txt_black"
            android:textSize="18sp"
            android:textStyle="normal" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"
            android:layout_marginBottom="64dp"
            android:backgroundTint="@color/orange"
            android:text="@string/update"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:visibility="invisible"
            android:textStyle="bold"
            app:cornerRadius="24dp" />

    </RelativeLayout>

</FrameLayout>