<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp">


            <LinearLayout
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center"
                android:layout_margin="8dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/white_round"
                android:padding="2dp">

                <TextView
                    android:id="@+id/blood_grp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="4dp"
                    android:backgroundTint="@color/white"
                    android:gravity="center"
                    android:text="@string/a"
                    android:textColor="@color/pink"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:textColor="@color/gray_light"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text1"
                android:layout_alignParentStart="true"
                android:layout_marginHorizontal="8dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="Admin"
                android:textColor="@color/p_txt"
                android:textSize="18sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/name"
                android:layout_marginTop="8dp"
                android:text="@string/phone"
                android:textColor="@color/gray_light"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text2"
                android:layout_alignParentStart="true"
                android:layout_marginHorizontal="8dp"
                android:text="@string/ph"
                android:textColor="@color/p_txt"
                android:textSize="16sp"
                android:textStyle="normal" />


        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>