<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp">

            <TextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Hospital Name"
                android:textColor="@color/gray_light"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text1"
                android:layout_alignParentStart="true"
                android:layout_marginHorizontal="8dp"
                android:layout_toStartOf="@+id/con"
                android:text="@string/dummy123"
                android:maxLines="1"
                android:ellipsize="end"
                android:textColor="@color/p_txt"
                android:textSize="18sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/name"
                android:layout_marginTop="8dp"
                android:text="@string/location_l"
                android:textColor="@color/gray_light"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text2"
                android:layout_alignParentStart="true"
                android:layout_marginHorizontal="8dp"
                android:text="@string/location"
                android:textColor="@color/p_txt"
                android:textSize="16sp"
                android:textStyle="normal" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/location"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/pink_orange" />

            <TextView
                android:id="@+id/time_counter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/divider"
                android:layout_alignParentStart="true"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="12dp"
                android:text="Date:"
                android:textColor="@color/gray_light"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/divider"
                android:layout_marginTop="12dp"
                android:layout_toEndOf="@+id/time_counter"
                android:text="asdfasdfasdfasdf"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/chat"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_below="@+id/divider"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/ic_baseline_chat_24"
                android:visibility="gone" />

            <FrameLayout
                android:id="@+id/con"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="2dp"
                android:background="@drawable/pink_orange_shape">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center"
                    android:layout_margin="8dp"
                    android:layout_marginStart="16dp"
                    android:background="@drawable/white_round"
                    android:padding="2dp">

                    <TextView
                        android:id="@+id/blood_grp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="4dp"
                        android:backgroundTint="@color/white"
                        android:gravity="center"
                        android:text="@string/a"
                        android:textColor="@color/pink"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|end"
                    android:layout_marginEnd="8dp"
                    android:backgroundTint="@color/white"
                    android:gravity="center|end"
                    android:text="needed"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </FrameLayout>
        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>
</LinearLayout>